# openshmem-benchmark

./: .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  diffusion_simulator_trace_original.csv  gmm_pe_0.event_bytes.csv  hostfile  run.nu  spmm_trace_102962_density_0.3.json  spmm_trace_29532_density_0.1.json  spmm_trace_63668_density_0.2.json  test_script.nu  throughputs.csv  throughputs.json  throughputs_non_blocking.csv  trace2.json
experiment/: throughputs-atomic-contention.csv  trace_rank_0.transformed.csv
experiment-result/: put_throughputs_blocking.csv  throughputs-atomic-different-location.csv  throughputs-atomic.csv  throughputs-non-blocking.csv
experiments/: diffusion_simulator_trace_original.csv  spmm_trace_29532_density_0.1.json
mpi/: devenv.nix  devenv.yaml
mpi/ucx/: devenv.nix  devenv.yaml
src/: lib.rs  main.rs  osm_alloc.rs  osm_arc.rs  osm_box.rs  osm_scope.rs  osm_slice.rs  osm_team.rs  osm_vec.rs  osm_wrapper.rs  shalloc.rs
ucx/: devenv.nix
