[package]
name = "openshmem-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.5.1"
clap = { version = "4.5.32", features = ["derive"] }
ctrlc = "3.4.5"
libc = "0.2.171"
openshmem-sys = { git = "https://github.com/taooceros/openshmem-sys.git" }
quanta = "0.12.5"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }

[profile.release]
debug = true