[package]
name = "openshmem-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.7.2"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
ctrlc = "3.5.0"
libc = "0.2.175"
openshmem-sys = { git = "https://github.com/taooceros/openshmem-sys.git" }
quanta = "0.12.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
debug = true
